--- a/docs/css/custom/1_0.css
+++ b/docs/css/custom/1_0.css
@@ -50,7 +50,7 @@ ul.grid {
   background: linear-gradient(
     to top,
     rgba(0, 0, 0, 0.9) 0%,
-    rgba(0, 0, 0, 0) 50%,
+    rgba(0, 0, 0, 0.25) 50%,
     rgba(0, 0, 0, 0) 100%
   );
 }
@@ -208,14 +208,16 @@ ul.grid {
   order: 0;
   flex: 0 1 auto;
   align-self: auto;
-  background-color: #ccc;
-  padding: 12px;
+  background-color: #fc6;
+  color: #960;
+  border: solid 1px #9609;
+  padding: 8px;
   min-width: 200px;
   text-align: center;
 }
 
 .moreContainer a:hover,
 .moreContainer a:active {
-  background-color: #999;
+  background-color: #eb5;
   transition: 0.2s;
 }
