--- a/docs/css/custom/1_0.css
+++ b/docs/css/custom/1_0.css
@@ -64,6 +64,23 @@ ul.grid {
   bottom: 0;
 }
 
+.zone.a a.surcycle {
+  position: relative;
+  display: inline-block;
+  background-color: #ffffff80;
+  color: #000;
+  padding: 4px;
+  font-size: 1.25rem;
+  margin-bottom: 8px;
+  font-weight: 600;
+}
+
+.zone.a a.surcycle:hover,
+.zone.a a.surcycle:active {
+  background-color: #ffffff;
+  transition: 0.2s;
+}
+
 .zone.a .text {
   position: absolute;
   bottom: 8px;
@@ -79,6 +96,7 @@ ul.grid {
   font-size: 2.5rem;
   font-weight: 600;
   line-height: 2.5rem;
+  margin: 0.25rem 0;
 }
 
 .zone.b {
