--- a/docs/css/custom/1_1.css
+++ b/docs/css/custom/1_1.css
@@ -67,7 +67,7 @@ ul.grid {
   display: inline-block;
   background-color: #ffffff80;
   color: #000;
-  padding: 2px 4px;
+  padding: 4px 4px;
   font-size: 1.25rem;
   margin-bottom: 8px;
   font-weight: 600;
@@ -94,6 +94,7 @@ ul.grid {
   font-size: 2.5rem;
   font-weight: 600;
   line-height: 2.5rem;
+  margin: 0.25rem 0;
 }
 
 .zone.b {
