--- a/docs/css/bundle.css
+++ b/docs/css/bundle.css
@@ -1,3 +1,3 @@
-.tools.svelte-adclbg.svelte-adclbg.svelte-adclbg{position:fixed;right:0;bottom:0;margin:0;padding:4px;display:inline-block;background-color:#222;color:#eee;cursor:row-resize}.tools.svelte-adclbg.svelte-adclbg>select.svelte-adclbg.svelte-adclbg{font-size:0.875rem !important;margin:4px !important}.tools.svelte-adclbg>select.svelte-adclbg>option.svelte-adclbg{font-size:0.875rem !important}
+.tools.svelte-197bpr9.svelte-197bpr9.svelte-197bpr9{position:fixed;right:0;bottom:0;margin:0;padding:4px;display:inline-block;background-color:#222;color:#eee;cursor:row-resize;font-size:0.875rem}.tools.svelte-197bpr9.svelte-197bpr9>select.svelte-197bpr9.svelte-197bpr9{font-size:0.875rem !important;margin:4px !important}.tools.svelte-197bpr9>select.svelte-197bpr9>option.svelte-197bpr9{font-size:0.875rem !important}
 
 /*# sourceMappingURL=bundle.css.map */
