--- a/docs/css/custom/1_1.css
+++ b/docs/css/custom/1_1.css
@@ -67,7 +67,7 @@ ul.grid {
   display: inline-block;
   background-color: #ffffff80;
   color: #000;
-  padding: 4px 4px;
+  padding: 4px;
   font-size: 1.25rem;
   margin-bottom: 8px;
   font-weight: 600;
@@ -176,6 +176,7 @@ ul.grid {
   align-content: flex-start;
   align-items: flex-start;
   height: 210px;
+  margin-bottom: 24px;
 }
 
 .zone.d a.surcycle {
@@ -192,11 +193,19 @@ ul.grid {
 }
 
 .zone.d a.main {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  justify-content: flex-start;
+  align-content: stretch;
+  align-items: flex-start;
   position: relative;
   flex: 1 1 auto;
   align-self: stretch;
-  background-color: #eee;
-  padding: 8px;
+  /* background-color: #eee; */
+  /* padding: 8px; */
+  padding: 0 0 8px 0;
+  border-top: solid 1px #ccc;
 }
 
 .zone.d a.main:hover,
@@ -205,11 +214,28 @@ ul.grid {
   transition: 0.2s;
 }
 
+.zone.d a.main .text {
+  flex: 1 0 auto;
+  align-self: auto;
+  width: 100%;
+  height: 75px;
+  align-self: stretch;
+  color: #111;
+  padding: 8px 8px 0 8px;
+}
+
 .zone.d .title {
   font-family: QuicksandCF;
   text-transform: uppercase;
   font-weight: 700;
   font-size: 1rem;
+}
+
+.zone.d .thumb {
+  flex: 1 0 auto;
+  align-self: stretch;
+  height: 115px;
+  background-position: 50% 50%;
 }
 
 .moreContainer {
