--- a/docs/css/custom/1_1.css
+++ b/docs/css/custom/1_1.css
@@ -47,10 +47,12 @@ ul.grid {
   right: 0;
   left: 0;
   bottom: 0;
-  background: linear-gradient(to top,
-      rgba(0, 0, 0, 0.9) 0%,
-      rgba(0, 0, 0, 0.25) 50%,
-      rgba(0, 0, 0, 0) 100%);
+  background: linear-gradient(
+    to top,
+    rgba(0, 0, 0, 0.9) 0%,
+    rgba(0, 0, 0, 0.25) 50%,
+    rgba(0, 0, 0, 0) 100%
+  );
 }
 
 .zone.a .thumb,
@@ -164,7 +166,6 @@ ul.grid {
   display: block;
   position: relative;
   height: 250px;
-  /* background-color: #ccc; */
 }
 
 .zone.d .thumb {
@@ -172,6 +173,10 @@ ul.grid {
   width: 100%;
   height: 145px;
   background-position: 50% 50%;
+}
+
+.zone.d.surcycle-container .thumb {
+  background-color: #709996;
 }
 
 .zone.d a.surcycle {
@@ -207,30 +212,4 @@ ul.grid {
   text-transform: uppercase;
   font-weight: 700;
   font-size: 1rem;
-}
-
-.moreContainer {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: flex-end;
-  margin-bottom: 36px;
-}
-
-.moreContainer a {
-  order: 0;
-  flex: 0 1 auto;
-  align-self: auto;
-  background-color: #fc6;
-  color: #960;
-  border: solid 1px #9609;
-  padding: 8px;
-  min-width: 200px;
-  text-align: center;
-}
-
-.moreContainer a:hover,
-.moreContainer a:active {
-  background-color: #eb5;
-  transition: 0.2s;
 }
