--- a/docs/css/custom/1_0n.css
+++ b/docs/css/custom/1_0n.css
@@ -16,9 +16,9 @@ ul.grid {
 }
 
 .zone .thumb {
+  background-color: #709996;
+  background-image: none !important;
   display: block;
-  background-position: bottom center;
-  background-size: cover;
 }
 
 .zone.a {
@@ -41,16 +41,7 @@ ul.grid {
 }
 
 .mask {
-  position: absolute;
-  display: block;
-  top: 0;
-  right: 0;
-  left: 0;
-  bottom: 0;
-  background: linear-gradient(to top,
-      rgba(0, 0, 0, 0.9) 0%,
-      rgba(0, 0, 0, 0.25) 50%,
-      rgba(0, 0, 0, 0) 100%);
+  display: none;
 }
 
 .zone.a .thumb,
@@ -96,7 +87,6 @@ ul.grid {
   line-height: 2.5rem;
   margin: 0.25rem 0;
 }
-
 
 .zone.a.message .text {
   font-size: 1.25rem;
